--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,12 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="./images/logo.svg"
+          src="<%=require('./images/logo.svg')%>"
           alt="Логотип проекта масто"
           class="logo header__logo"
         />
@@ -23,7 +22,7 @@
         <section class="profile page__section">
           <div
             class="profile__image"
-            style="background-image: url('./images/avatar.jpg')"
+            style="background-image: url('<%=require('./images/avatar.jpg')%>')"
           ></div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -66,7 +65,7 @@
         </div>
       </div>
       <div class="popup popup_type_new-card">
-        <div class="popup__content">
+        <div class="popup__content popup__content2">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
           <form class="popup__form" name="new-place">
@@ -98,8 +97,6 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js" defer></script>
 
     <!--Относится к реализации 4-го спринта-->
     <template id="card-template">
