--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="popup popup_type_new-card">
-        <div class="popup__content popup__content2">
+        <div class="popup__content popup__new-card">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
           <form class="popup__form" name="new-place">
