--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
         <img class="card__image" src="" alt="" />
         <button
           type="button"
-          class="card__delete-button card__delete-button-unactive"
+          class="card__delete-button"
           aria-label="удалить карточку"
         ></button>
         <!--Фоновое, инлайном-->
